--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1474,7 +1474,7 @@
       "START_DATE_INVALID": "Must start a {{day}}",
       "INVALID_LANDING": "Invalid landing",
       "INVALID_LANDINGS": "Please observe or enter the reason for non-observation",
-      "INVALID_OBSERVED_COUNT": "Incorrect number of observed species. Please observe {{minObservedCount}} to {{maxObservedCount}} species"
+      "INVALID_OBSERVED_COUNT": "Incorrect number of observed species. Please observe at least {{minObservedCount}} species"
     },
     "CONFIRM": {
       "DELETE_ONE_HAS_SAMPLE": "The selected occasion is linked to individual measures.<br/><br/><b>Are you sure</b> you want to delete it?",
@@ -1563,7 +1563,7 @@
       "TAXON_NAME": "Scientific species",
       "BTN_OPEN_TRIP": "Open the trip",
       "BTN_OPEN_SALE": "Open the sale",
-      "OBSERVED_SPECIES_COUNT": "<b>{{observedCount}}</b> observed species (min.: {{minObservedCount}}, max.: {{maxObservedCount}})",
+      "OBSERVED_SPECIES_COUNT": "<b>{{observedCount}}</b> observed species (min.: {{minObservedCount}})",
       "SAMPLING": {
         "STRATEGY": "Sampling strata",
         "SAMPLES_COUNT": "Samples count",
