--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1639,7 +1639,9 @@
       "COUNT_SAMPLES_ERROR": "Erreur de comptage des échantillonnages de l'observation.",
       "START_DATE_INVALID": "Doit commencer un {{day}}",
       "INVALID_LANDING": "Débarquement invalide",
-      "INVALID_LANDINGS": "Veuillez observer ou saisir la raison de non observation",
+      "INVALID_LANDINGS": "Veuillez observer ou saisir la raison de non observation"
+    },
+    "WARNING": {
       "INVALID_OBSERVED_COUNT": "Nombre d'espèces observées incorrect. Veuillez observer au moins {{minObservedCount}} espèces"
     },
     "CONFIRM": {
